<resources>
    <string name="app_name">自动记账</string>
    <string name="main_page_title">我的收支</string>
    <string name="today_all_cost">今日累计</string>
    <string name="month_all_cost">本月累计</string>
    <string name="searchMonthlyReport">查看月度报告</string>
    <string name="ai_bill">ai账单</string>
    <string name="deleteAllOrders">清空所有账单记录</string>
    <string name="OrderDetail">账单详情</string>
    <string name="hint_input_cost_number">请输入金额(元)</string>
    <string name="remark">备注</string>
    <string name="save_changes">保存更改</string>
    <string name="month_report_page_title">月度报告</string>
    <string name="expenditure_distribution">支出分布</string>
    <string name="total_revenue_expenditure">总收支</string>
    <!--    以下需要后台更改-->
    <string name="today_all_cost_number">0.00</string>
    <string name="month_all_cost_number">0.00</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="channel_name">OrderNotification</string>
    <string name="channel_description">用于发送读取账单通知</string>
</resources>
