<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:forceDarkAllowed="true"
    >
    <!-- 第一行,包含新增,我的支出和设置图标-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/theFirstLine"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_background"
        android:orientation="horizontal">
        <!-- 新增按钮-->
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btnPlusNewOrder"
            android:background="@drawable/plus_new_order"
            android:gravity="start"
            android:layout_marginStart="10dp"
            >
        </Button>
        <!-- 我的收支-->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
        <!-- 设置按钮-->
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btnSettings"
            android:background="@drawable/settings"
            android:gravity="end"
            android:layout_marginEnd="10dp">
        </Button>
    </LinearLayout>

    <!--第二行的今日和本月累计-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--今日累计-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:padding="20dp"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_all_cost"
                    android:textColor="@color/primary_font">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAllTodayOrder"
                    android:text="@string/today_all_cost_number"
                    android:textColor="@color/primary_font"
                    android:textSize="30sp">
                </TextView>
        </LinearLayout>

        <!--本月累计-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="end"
            android:padding="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_all_cost"
                android:textColor="@color/primary_font">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAllMonthOrder"
                android:text="@string/month_all_cost_number"
                android:textColor="@color/primary_font"
                android:textSize="30sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <!--查看月度报告-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnSearchMonthlyReport"
            android:text="@string/searchMonthlyReport"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@drawable/corner_btn"
            android:textColor="@color/white">
        </Button>
    </LinearLayout>

    <!-- 灰色分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        android:layout_marginTop="10dp">
    </View>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/order_detail_tab"
        android:layout_width="match_parent"
        style="@style/Base.Widget.Design.TabLayout"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/TextAppearanceBase"
            android:id="@+id/personal_order_detail_item">
        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:id="@+id/family_order_detail_item"
            android:layout_height="match_parent">
        </com.google.android.material.tabs.TabItem>
    </com.google.android.material.tabs.TabLayout>
    <!--所有账单的详细信息-->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/orders_detail_view_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>