<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!-- 第一行,包含账单详情图标-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/theFirstLine"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <!-- 我的收支-->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/OrderDetail"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <!-- 灰色分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        android:layout_marginTop="10dp">
    </View>

    <!--第二行,包括输入金额和消费类型-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="10dp">
        <!--金额输入框-->
        <EditText
            android:id="@+id/etOrderNumber"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_cost_number"
            android:background="@null"
            >
        </EditText>
        <!--收支类型-->
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:text="支出"
            android:textColor="@color/white"
            android:background="@drawable/corner_btn"
            android:id="@+id/btnOrderType"
            >
        </Button>
        <!--竖向分割线-->
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_margin="10dp">
        </View>
        <!--类型选择-->
        <Button
            android:id="@+id/btnCostType"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.3"

            android:background="@drawable/corner_btn"
            android:text="消费"
            android:textColor="@color/white"
            android:textSize="15sp">

        </Button>
    </LinearLayout>

    <!-- 灰色分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        >
    </View>

    <!--第三行,包括时间和支付方式-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        >
        <!--时间-->
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:id="@+id/btnGetCurrentTime"
            android:background="@drawable/corner_btn"
            android:textColor="@color/white">
        </Button>
        <!--竖向分割线-->
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_margin="10dp">
        </View>
        <!--支付方式-->
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="银行卡"
            android:id="@+id/btnPayWay"
            android:background="@drawable/corner_btn"
            android:textColor="@color/white"
            >
        </Button>
    </LinearLayout>

    <!-- 灰色分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        android:layout_marginTop="10dp">
    </View>

    <!--第四行,包括订单备注-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        android:layout_margin="15dp"
        android:id="@+id/etOrderRemark"
        android:hint="@string/remark"
        android:inputType="text"
        android:background="@null"
        >

    </EditText>

    <!-- 灰色分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        android:layout_marginTop="10dp">
    </View>

    <!--第五行,保存修改按钮-->
    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/corner_btn"
        >
    </Button>
    <!--当前账单状态-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:id="@+id/tv_order_status">
        </TextView>
    </LinearLayout>
</LinearLayout>